--- a/public/admin/production/form_validation.html
+++ b/public/admin/production/form_validation.html
@@ -452,7 +452,7 @@
   <!-- NProgress -->
   <script src="../vendors/nprogress/nprogress.js"></script>
   <!-- validator -->
-  <!-- <script src="../vendors/validator/validator.js"></script> -->
+  <script src="../vendors/validator/validator.js"></script>
 
   <!-- Custom Theme Scripts -->
   <script src="../build/js/custom.min.js"></script>
